新增用例 矢量计算 外部内存接口 外部函数接口